Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3124

bad interaction between layout lock and wide striping

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.4.0
    • Lustre 2.4.0
    • 3
    • 7589

      To implement the layout lock, Fanyong and Jinshan added a LVB to ibit lock so that the LOV EA can be packed in completion ASTs. However, for wide-striped files, the client is not expecting such a big LVB buffer in an AST.
      I think the MDT should have a upper LVB limit over which it only packs the "header" (i.e. the most important field is the generation) and the OST FID list will have to be fetched via another RPC from the client.

            jay Jinshan Xiong (Inactive)
            johann Johann Lombardi (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved: